<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.instamobile.firebaseStarterKit.ui.fragment.authHost.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        tools:context="com.instamobile.firebaseStarterKit.ui.fragment.authHost.AuthFragment">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@id/tvWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_chat"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvStay"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/welcome_to_messenger"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvStay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvStay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="20dp"
            android:text="@string/stay_in_touch"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_blue_button"
            android:onClick="@{()-> authViewModel.startNavigationToLogin()}"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/mainBgColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStay" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_border"
            android:onClick="@{()-> authViewModel.navigateToSignUp()}"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>